Added RF and DT Classification Models

--- a/classifier_comparison.ipynb
+++ b/classifier_comparison.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "id": "patient-redhead",
    "metadata": {},
    "outputs": [],
@@ -35,6 +35,7 @@
     "from sklearn import svm # Support Vector Machine Classifier\n",
     "from sklearn.ensemble import RandomForestClassifier # Random Forest Classifier\n",
     "from sklearn.naive_bayes import GaussianNB # Naive Bayes Classifier\n",
+    "from sklearn.tree import DecisionTreeClassifier # Decision Tree Classifier\n",
     "from sklearn import metrics"
    ]
   },
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "wired-sodium",
    "metadata": {
     "scrolled": true
@@ -223,7 +224,7 @@
        "4               1.0               0.0           0.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "theoretical-correspondence",
    "metadata": {
     "scrolled": true
@@ -278,6 +279,7 @@
        "      <th>chest_pain_from_heart_N</th>\n",
        "      <th>chest_pain_from_heart_Y</th>\n",
        "      <th>ExerciseAngina_N</th>\n",
+       "      <th>ExerciseAngina_Y</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -297,6 +299,7 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -314,6 +317,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -331,6 +335,7 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -348,6 +353,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -365,6 +371,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -392,22 +399,23 @@
        "3                  0.0                      1.0                      0.0   \n",
        "4                  0.0                      1.0                      0.0   \n",
        "\n",
-       "   ExerciseAngina_N  \n",
-       "0               1.0  \n",
-       "1               1.0  \n",
-       "2               1.0  \n",
-       "3               0.0  \n",
-       "4               1.0  "
+       "   ExerciseAngina_N  ExerciseAngina_Y  \n",
+       "0               1.0               0.0  \n",
+       "1               1.0               0.0  \n",
+       "2               1.0               0.0  \n",
+       "3               0.0               1.0  \n",
+       "4               1.0               0.0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Remove Validation Column (Heart Disease) from Other Attributes\n",
-    "cols = X.columns.to_list()\n",
+    "\n",
+    "cols = df.columns.to_list()\n",
     "cols = cols[:-1]\n",
     "\n",
     "X = df[cols]\n",
@@ -427,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "advisory-swift",
    "metadata": {
     "scrolled": false
@@ -448,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "promotional-portugal",
    "metadata": {},
    "outputs": [],
@@ -465,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "visible-difficulty",
    "metadata": {},
    "outputs": [
@@ -473,9 +481,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8913043478260869\n",
-      "Precision: 0.8909090909090909\n",
-      "Recall: 0.9245283018867925\n"
+      "Accuracy: 0.8369565217391305\n",
+      "Precision: 0.8288288288288288\n",
+      "Recall: 0.8932038834951457\n"
      ]
     }
    ],
@@ -503,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "scheduled-reply",
    "metadata": {},
    "outputs": [],
@@ -520,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "id": "polar-yahoo",
    "metadata": {},
    "outputs": [
@@ -528,9 +536,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7989130434782609\n",
-      "Precision: 0.8349514563106796\n",
-      "Recall: 0.8113207547169812\n"
+      "Accuracy: 0.8532608695652174\n",
+      "Precision: 0.8725490196078431\n",
+      "Recall: 0.8640776699029126\n"
      ]
     }
    ],
@@ -549,9 +557,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65da75b2",
+   "metadata": {},
+   "source": [
+    "## Random Forest Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e211e0ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Forest\n",
+    "rf_clf = RandomForestClassifier(n_estimators = 100)\n",
+    "\n",
+    "# Train the Random Forest Model\n",
+    "rf_clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Predictions\n",
+    "rf_y_pred = rf_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6805065f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8315217391304348\n",
+      "Precision: 0.839622641509434\n",
+      "Recall: 0.8640776699029126\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Random Forest Accuracy\n",
+    "rf_acc = metrics.accuracy_score(y_test, rf_y_pred)\n",
+    "print(\"Accuracy:\", rf_acc)\n",
+    "\n",
+    "# Random Forest Precision\n",
+    "rf_pre = metrics.precision_score(y_test, rf_y_pred)\n",
+    "print(\"Precision:\", rf_pre)\n",
+    "\n",
+    "# Random Forest Recall\n",
+    "rf_rcl = metrics.recall_score(y_test, rf_y_pred)\n",
+    "print(\"Recall:\", rf_rcl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a448955",
+   "metadata": {},
+   "source": [
+    "## Decision Tree Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "35cc985d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decision Tree\n",
+    "dt_clf = DecisionTreeClassifier()\n",
+    "\n",
+    "# Train the Decision Tree Model\n",
+    "dt_clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Predictions\n",
+    "dt_y_pred = dt_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9649b135",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7608695652173914\n",
+      "Precision: 0.797979797979798\n",
+      "Recall: 0.7669902912621359\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Decision Tree Accuracy\n",
+    "dt_acc = metrics.accuracy_score(y_test, dt_y_pred)\n",
+    "print(\"Accuracy:\", dt_acc)\n",
+    "\n",
+    "# Decision Tree Precision\n",
+    "dt_pre = metrics.precision_score(y_test, dt_y_pred)\n",
+    "print(\"Precision:\", dt_pre)\n",
+    "\n",
+    "# Decision Tree Recall\n",
+    "dt_rcl = metrics.recall_score(y_test, dt_y_pred)\n",
+    "print(\"Recall:\", dt_rcl)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exterior-turkey",
+   "id": "e1c6c5cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -559,7 +677,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -573,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
